catch an exception:JsonParseException

--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
             <version>1.7.25</version>
         </dependency>
 
+<!--  测试用
 
-        <!-- spark -->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
@@ -64,6 +64,7 @@
             <artifactId>spark-streaming_2.11</artifactId>
             <version>2.2.0</version>
         </dependency>
+-->
 
 
     </dependencies>
